infra/k8s/add-points-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-points-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-points
  template:
    metadata:
      labels:
        app: add-points
    spec:
      containers:
        - name: add-points
          image: cristiancasd/leal-add-points
---
apiVersion: v1
kind: Service
metadata:
  name: add-points-srv
spec:
  selector:
    app: add-points
  ports:
    - name: add-points
      protocol: TCP
      port: 8060
      targetPort: 8060
