infra/k8s/kafka-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-srv
spec:
  selector:
    app: zookeeper
  ports:
  - protocol: TCP
    port: 2181
    targetPort: 2181

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  serviceName: "zookeeper-srv"
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.3.2
        ports:
        - containerPort: 2181
        volumeMounts:
        - name: data
          mountPath: /var/lib/zookeeper/data
      volumes:
      - name: data
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: broker-srv
spec:
  selector:
    app: broker
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: broker
spec:
  serviceName: "broker-srv"
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - name: broker
        image: confluentinc/cp-kafka:7.3.2
        ports:
        - containerPort: 9092
        - containerPort: 29092
        volumeMounts:
        - name: data
          mountPath: /var/lib/kafka/data
      volumes:
      - name: data
        emptyDir: {}
