infra/k8s/redeem-points-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redeem-points-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redeem-points
  template:
    metadata:
      labels:
        app: redeem-points
    spec:
      containers:
        - name: redeem-points
          image: cristiancasd/leal-redeem-points
---
apiVersion: v1
kind: Service
metadata:
  name: redeem-points-srv
spec:
  selector:
    app: redeem-points
  ports:
    - name: redeem-points
      protocol: TCP
      port: 8062
      targetPort: 8062
